@@ -475,7 +475,7 @@ load_file(fname, script)
 		    char *path;
 		    char *pend = RSTRING(line)->ptr + RSTRING(line)->len;
 
-		    p = RSTRING(line)->ptr + 2;	/* skip `#!' */
+		    p = RSTRING(line)->ptr + 1;	/* skip `#!' */
 		    if (pend[-1] == '\n') pend--; /* chomp line */
 		    if (pend[-1] == '\r') pend--;
 		    *pend = '\0';
