@@ -1,2 +1,2 @@
 #define RUBY_VERSION "1.1b5"
-#define VERSION_DATE "98/01/16"
+#define VERSION_DATE "98/01/19"
